# samwell

./: .gitignore  LICENSE  README.md  flake8.cfg  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/: api.rst  conf.py  index.rst  release_notes.rst
samwell/: dnautils.py  itertools.py  overlap_detector.py
samwell/sam/: __init__.py  bwa_mem.py  clipping.py  sambuilder.py
samwell/sam/tests/: test_bwa_mem.py  test_clipping.py  test_sam.py  test_sambuilder.py
samwell/tests/: test_dnautils.py  test_itertools.py  test_overlap_detector.py
